--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-root-toast": "^3.1.2",
     "react-native-safe-area-context": "^3.0.3",
     "react-native-screens": "^2.8.0",
+    "react-native-splash-screen": "^3.2.0",
     "react-native-vector-icons": "^6.6.0",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5"
