--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@react-navigation/drawer": "^5.8.2",
     "@react-navigation/native": "^5.5.1",
     "@react-navigation/stack": "^5.5.1",
+    "i18next": "^19.4.5",
     "react": "16.11.0",
+    "react-i18next": "^11.6.0",
     "react-native": "0.62.2",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-reanimated": "^1.9.0",
