--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "android": "cd android && ./gradlew clean && cd .. && react-native run-android",
+    "android-release": "cd android && ./gradlew clean && cd .. && react-native run-android --variant release",
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
